# hdrpy

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: test_img.pfm
docker/rootful/: Dockerfile
docker/rootful/cpu/: docker-compose.yml
docker/rootful/gpu/: docker-compose.yml
docker/rootless/: Dockerfile
docker/rootless/cpu/: docker-compose.yml
docker/rootless/gpu/: docker-compose.yml
docker/rootless/rootful/cpu/: docker-compose.yml
docker/rootless/rootful/gpu/: docker-compose.yml
docs/: conf.py  hdrpy.format.rst  hdrpy.generation.rst  hdrpy.io.rst  hdrpy.mef.rst  hdrpy.rst  hdrpy.tmo.rst  index.rst  modules.rst
hdrpy/: __init__.py  math.py  stats.py
hdrpy/format/: __init__.py  format.py  openexr.py  pfm.py  radiance_hdr.py
hdrpy/generation/: hdr_generation.py
hdrpy/io/: __init__.py  imread.py  imwrite.py
hdrpy/mef/: __init__.py  fusion.py
hdrpy/tmo/: __init__.py  eilertsen.py  kinoshita.py  linear.py  operator.py  operators.py  preprocessing.py  reinhard.py
io/: ExrReader.py  ImReader.py  RadianceHDRFormat.py  __init__.py  hdr_format.py  imread.py  my_img_io.py  pfm_format.py
notebooks/: image-io.ipynb
src/: __init__.py  image.py
src/format/: openexr.py  radiance_hdr.py
src/hdrpy/format/: __init__.py  pfm.py
src/hdrpy/generation/: __init__.py
src/hdrpy/io/: imread.py
src/hdrpy/tmo/: eilertsen.py
src/io/: imread.py
src/tmo/: linear.py  operator.py
tmo/: curve.py  operators.py  preprocessing.py
