[tool.poetry]
name = "hdrpy"
version = "0.1.0"
description = "A package for handling high dynamic range (HDR) images with Python."
authors = ["Yuma Kinoshita"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
colour-science = "^0.3.16"
opencv-python = "^4.5.1"
OpenEXR = "^1.3.2"

[tool.poetry.extras]
openexr = ["OpenEXR"]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
autopep8 = "^1.5.5"
Sphinx = "^3.5.2"
scipy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
