[tool.poetry]
name = "hdrpy"
version = "0.1.0"
description = "A package for handling high dynamic range (HDR) images with Python."
authors = ["Yuma Kinoshita"]
license = "MIT"
packages = [
  {include = "hdrpy", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.25.1"
colour-science = "^0.4.2"
opencv-python = "^4.8.0.74"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.0"
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
Sphinx = "^3.5.2"
scipy = "^1.6.1"
black = "^23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^1.0.1"
nox = "^2022.11.21"
pre-commit = "^3.1.0"
notebook = "^6.5.2"
ipykernel = "^6.22.0"
matplotlib = "^3.7.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
